# File-Allocation-Stimulation-in-C-

./: CMakeLists.txt  README.md  a.out  indexed.c  inode.c  linked-fat.c  linked.c  sequential.c
